@@ -73,6 +73,7 @@ LIBXT_VER=1.0.7
 LIBSM_VER=1.0.3
 LIBICE_VER=1.0.4
 LIBXSS_VER=1.2.2
+LIBXKBCOMMON_VER=
 
 # LIBDRM_VER=2.4.60
 # MESA_VER=10.5.4
