@@ -72,6 +72,7 @@ LIBXT_VER=1.0.7
 LIBSM_VER=1.0.3
 LIBICE_VER=1.0.4
 LIBXSS_VER=1.2.0
+LIBXKBCOMMON_VER=
 
 LIBDRM_VER=2.4.22
 MESA_VER=7.8.2
